Fix https://issues.apache.org/bugzilla/show_bug.cgi?id=55404 Log warnings about using security roles that are not defined in web.xml as warnings
git-svn-id: https://svn.apache.org/repos/asf/tomcat/tc6.0.x/trunk@1539580 13f79535-47bb-0310-9956-ffa450edef68

--- a/java/org/apache/catalina/startup/LocalStrings_es.properties
+++ b/java/org/apache/catalina/startup/LocalStrings_es.properties
@@ -36,9 +36,9 @@ contextConfig.defaultPosition = Se ha producido en la l\u00EDnea {0} columna {1}
 contextConfig.fixDocBase = Excepci\u00F3n arreglando docBase\: {0}
 contextConfig.init = ContextConfig\: Inicializando
 contextConfig.missingRealm = Alg\u00FAn reino (realm) no ha sido configurado para realizar la autenticaci\u00F3n
-contextConfig.role.auth = ATENCI\u00D3N\: El nombre de papel de seguridad {0} es usado en un <auth-constraint> sin haber sido definido en <security-role>
-contextConfig.role.link = ATENCI\u00D3N\: El nombre de papel de seguridad {0} es usado en un <role-link> sin haber sido definido en <security-role>
-contextConfig.role.runas = ATENCI\u00D3N\: El nombre de papel de seguridad {0} es usado en un <run-as> sin haber sido definido en <security-role>
+contextConfig.role.auth = El nombre de papel de seguridad {0} es usado en un <auth-constraint> sin haber sido definido en <security-role>
+contextConfig.role.link = El nombre de papel de seguridad {0} es usado en un <role-link> sin haber sido definido en <security-role>
+contextConfig.role.runas = El nombre de papel de seguridad {0} es usado en un <run-as> sin haber sido definido en <security-role>
 contextConfig.start = "ContextConfig"\: Tratamiento del "START"
 contextConfig.stop = "ContextConfig"\: Tratamiento del "STOP"
 contextConfig.tldEntryException = Excepci\u00F3n durante el tratamiento de la TLD {0} en el JAR indicado por la trayectoria de recurso {1} en contexto {2}
