Fix https://issues.apache.org/bugzilla/show_bug.cgi?id=55671 s/genStrAsCharArray/genStringAsCharArray/ and retain support for genStrAsCharArray as an init parameter
git-svn-id: https://svn.apache.org/repos/asf/tomcat/tc6.0.x/trunk@1557994 13f79535-47bb-0310-9956-ffa450edef68

--- a/java/org/apache/jasper/resources/LocalStrings_es.properties
+++ b/java/org/apache/jasper/resources/LocalStrings_es.properties
@@ -167,7 +167,7 @@ jsp.warning.development = Aviso\: valor incorrecto para el initParam development
 jsp.warning.fork = Aviso\: valor incorrecto para el initParam fork. Se usar\u00E1 el valor por defecto de "true"
 jsp.warning.reloading = Aviso\: valor incorrecto para el initParam reloading. Se usar\u00E1 el valor por defecto de "true"
 jsp.warning.dumpSmap = Aviso\: valor incorrecto para el initParam dumpSmap. Se usar\u00E1 el valor por defecto de "false"
-jsp.warning.genchararray = Aviso\: valor incorrecto para el initParam genStrAsCharArray. Se usar\u00E1 el valor por defecto de "false"
+jsp.warning.genchararray = Aviso\: valor incorrecto para el initParam genStringAsCharArray. Se usar\u00E1 el valor por defecto de "false"
 jsp.warning.suppressSmap = Aviso\: valor incorrecto para el initParam suppressSmap. Se usar\u00E1 el valor por defecto de "false"
 jsp.warning.displaySourceFragment = Aviso\: valor incorrecto para el initParam displaySourceFragment. Se usar\u00E1 el valor por defecto de "verdadero"
 jsp.error.badtaglib = No se puede abrir la biblioteca de tags {0}\: {1}
